docs: adiciona descrições dos endpoints no Swagger